--- a/index.html
+++ b/index.html
@@ -24,15 +24,19 @@
             color: white !important;
         }
         .loading-overlay {
-            background: rgba(255, 255, 255, 0.8);
+            background: rgba(255, 255, 255, 0.9);
             backdrop-filter: blur(4px);
         }
     </style>
 </head>
 <body class="bg-slate-50 min-h-screen py-8 px-4">
 
+    <!-- Loading Spinner -->
     <div id="loading-spinner" class="fixed inset-0 z-50 flex items-center justify-center loading-overlay transition-opacity duration-300">
-        <div class="animate-spin rounded-full h-12 w-12 border-b-2 border-indigo-600"></div>
+        <div class="text-center">
+            <div class="animate-spin rounded-full h-12 w-12 border-b-2 border-indigo-600 mx-auto"></div>
+            <p class="mt-4 text-slate-600 font-medium">Loading your board...</p>
+        </div>
     </div>
 
     <div class="max-w-md mx-auto">
@@ -44,72 +48,62 @@
                 </svg>
             </div>
             <h1 class="text-3xl font-bold text-slate-800 tracking-tight">Book Club Bingo</h1>
-            <p class="text-slate-500 mt-1">Progress is automatically saved</p>
+            <p id="save-status" class="text-slate-500 mt-1">Progress saved locally</p>
         </div>
 
         <!-- Bingo Grid -->
         <div id="bingo-grid" class="grid grid-cols-5 gap-2 bg-white p-3 rounded-3xl shadow-xl border border-slate-100 mb-8">
-            <!-- Tiles will be injected here by JS -->
+            <!-- Tiles will be injected here -->
         </div>
 
         <!-- Bingo Alert -->
         <div id="bingo-alert" class="hidden bg-emerald-50 border border-emerald-100 p-4 rounded-2xl flex items-center gap-4 animate-bounce mb-6">
-            <div class="bg-emerald-500 p-2 rounded-full">
+            <div class="bg-emerald-500 p-2 rounded-full shadow-lg shadow-emerald-200">
                 <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-white" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 3v4M3 5h4M6 17v4m-2-2h4m5-16l2.286 6.857L21 12l-5.714 2.143L13 21l-2.286-6.857L5 12l5.714-2.143L13 3z" />
                 </svg>
             </div>
             <div>
                 <p class="font-bold text-emerald-800 leading-none">BINGO!</p>
-                <p class="text-sm text-emerald-600 mt-1">You've cleared a line! Share with the group.</p>
+                <p class="text-sm text-emerald-600 mt-1">Awesome! Screenshot this for the chat.</p>
             </div>
         </div>
 
         <!-- Controls -->
         <div class="grid grid-cols-2 gap-3 mb-8">
-            <button onclick="copyLink()" class="flex items-center justify-center gap-2 bg-white border border-slate-200 p-4 rounded-2xl font-semibold text-slate-700 active:bg-slate-50 transition-colors shadow-sm">
+            <button onclick="copyLink()" class="flex items-center justify-center gap-2 bg-white border border-slate-200 p-4 rounded-2xl font-semibold text-slate-700 active:bg-slate-100 transition-colors shadow-sm">
                 <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8.684 13.342C8.886 12.938 9 12.482 9 12c0-.482-.114-.938-.316-1.342m0 2.684a3 3 0 110-2.684m0 2.684l6.632 3.316m-6.632-6a3 3 0 100-2.684m0 2.684l6.632-3.316m0 0a3 3 0 105.367-2.684 3 3 0 00-5.367 2.684zm0 9.316a3 3 0 105.368 2.684 3 3 0 00-5.368-2.684z" />
                 </svg>
-                Share
+                Share Link
             </button>
-            <button onclick="confirmReset()" class="flex items-center justify-center gap-2 bg-white border border-slate-200 p-4 rounded-2xl font-semibold text-slate-700 active:bg-slate-50 transition-colors shadow-sm">
+            <button onclick="confirmReset()" class="flex items-center justify-center gap-2 bg-white border border-slate-200 p-4 rounded-2xl font-semibold text-slate-700 active:bg-slate-100 transition-colors shadow-sm text-red-600">
                 <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 4v5h.582m15.356 2A8.001 8.001 0 004.582 9m0 0H9m11 11v-5h-.581m0 0a8.003 8.003 0 01-15.357-2m15.357 2H15" />
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16" />
                 </svg>
-                Reset
+                Clear Board
             </button>
         </div>
 
         <!-- Rules Box -->
         <div class="bg-indigo-50 p-6 rounded-3xl border border-indigo-100">
             <h3 class="font-bold text-indigo-900 mb-3 text-lg flex items-center gap-2">
-                Rules of Engagement
+                Rules & Info
             </h3>
             <ul class="text-sm text-indigo-800 space-y-3 opacity-90">
-                <li class="flex gap-2"><span>•</span> <span>Complete any 5 squares in a row, column, or diagonal.</span></li>
-                <li class="flex gap-2"><span>•</span> <span>Progress is saved to the cloud automatically.</span></li>
-                <li class="flex gap-2"><span>•</span> <span>Winner picks the theme for the next session!</span></li>
+                <li class="flex gap-2"><span>•</span> <span>Complete 5 squares (row, column, or diagonal) to win.</span></li>
+                <li class="flex gap-2"><span>•</span> <span>Your progress is saved automatically on this device.</span></li>
+                <li class="flex gap-2"><span>•</span> <span>First to Bingo picks the next theme!</span></li>
             </ul>
         </div>
     </div>
 
-    <div id="toast" class="fixed bottom-8 left-1/2 -translate-x-1/2 bg-slate-800 text-white px-6 py-3 rounded-full text-sm font-medium shadow-2xl opacity-0 transition-opacity pointer-events-none">
+    <div id="toast" class="fixed bottom-8 left-1/2 -translate-x-1/2 bg-slate-800 text-white px-6 py-3 rounded-full text-sm font-medium shadow-2xl opacity-0 transition-opacity pointer-events-none duration-300">
         Link copied!
     </div>
 
-    <!-- Firebase SDKs -->
-    <script type="module">
-        import { initializeApp } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-app.js";
-        import { getAuth, signInAnonymously, signInWithCustomToken, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-auth.js";
-        import { getFirestore, doc, setDoc, onSnapshot } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-firestore.js";
-
-        const firebaseConfig = JSON.parse(__firebase_config);
-        const app = initializeApp(firebaseConfig);
-        const auth = getAuth(app);
-        const db = getFirestore(app);
-        const appId = typeof __app_id !== 'undefined' ? __app_id : 'default-app-id';
-
+    <script>
+        const STORAGE_KEY = 'book_club_bingo_v1';
         const challenges = [
             "Read a chapter outdoors", "Character makes a choice you hate", "Try a new coffee roast", "Finish a book early", "Export a highlight/note",
             "Prediction came true", "Plot twist you didn't see", "Read 50 pages in one sitting", "Mention a vegan snack", "Look up a word you didn't know",
@@ -119,14 +113,40 @@
         ];
 
         let marked = new Array(25).fill(false);
-        marked[12] = true;
-        let currentUser = null;
+        marked[12] = true; // Default Free Space
 
         const gridElement = document.getElementById('bingo-grid');
         const alertElement = document.getElementById('bingo-alert');
         const loader = document.getElementById('loading-spinner');
 
-        // Initialize UI
+        // Load data from LocalStorage
+        function loadProgress() {
+            const saved = localStorage.getItem(STORAGE_KEY);
+            if (saved) {
+                try {
+                    marked = JSON.parse(saved);
+                    // Ensure marked is an array of correct length
+                    if (!Array.isArray(marked) || marked.length !== 25) {
+                        marked = new Array(25).fill(false);
+                        marked[12] = true;
+                    }
+                } catch (e) {
+                    console.error("Error loading progress", e);
+                }
+            }
+            renderBoard();
+            
+            // Hide loader with a slight delay for smoothness
+            setTimeout(() => {
+                loader.style.opacity = '0';
+                setTimeout(() => loader.style.display = 'none', 300);
+            }, 500);
+        }
+
+        function saveProgress() {
+            localStorage.setItem(STORAGE_KEY, JSON.stringify(marked));
+        }
+
         function renderBoard() {
             gridElement.innerHTML = '';
             challenges.forEach((text, i) => {
@@ -148,39 +168,29 @@
             checkBingo();
         }
 
-        async function toggleTile(index) {
-            if (index === 12 || !currentUser) return;
+        function toggleTile(index) {
+            if (index === 12) return;
             marked[index] = !marked[index];
+            saveProgress();
             renderBoard();
-            await saveToCloud();
-        }
-
-        async function saveToCloud() {
-            if (!currentUser) return;
-            try {
-                const userDoc = doc(db, 'artifacts', appId, 'users', currentUser.uid, 'bingo_state', 'current');
-                await setDoc(userDoc, { marked, updatedAt: Date.now() });
-            } catch (e) {
-                console.error("Error saving:", e);
-            }
         }
 
         function checkBingo() {
             const lines = [
-                [0, 1, 2, 3, 4], [5, 6, 7, 8, 9], [10, 11, 12, 13, 14], [15, 16, 17, 18, 19], [20, 21, 22, 23, 24],
-                [0, 5, 10, 15, 20], [1, 6, 11, 16, 21], [2, 7, 12, 17, 22], [3, 8, 13, 18, 23], [4, 9, 14, 19, 24],
-                [0, 6, 12, 18, 24], [4, 8, 12, 16, 20]
+                [0, 1, 2, 3, 4], [5, 6, 7, 8, 9], [10, 11, 12, 13, 14], [15, 16, 17, 18, 19], [20, 21, 22, 23, 24], // Rows
+                [0, 5, 10, 15, 20], [1, 6, 11, 16, 21], [2, 7, 12, 17, 22], [3, 8, 13, 18, 23], [4, 9, 14, 19, 24], // Cols
+                [0, 6, 12, 18, 24], [4, 8, 12, 16, 20] // Diagonals
             ];
             const hasBingo = lines.some(line => line.every(idx => marked[idx]));
             alertElement.classList.toggle('hidden', !hasBingo);
         }
 
-        window.confirmReset = async () => {
-            if (confirm("Reset your board? This cannot be undone.")) {
+        window.confirmReset = () => {
+            if (confirm("Reset your board? This will clear all your checkmarks.")) {
                 marked = new Array(25).fill(false);
                 marked[12] = true;
+                saveProgress();
                 renderBoard();
-                await saveToCloud();
             }
         };
 
@@ -191,47 +201,14 @@
             dummy.select();
             document.execCommand('copy');
             document.body.removeChild(dummy);
+            
             const toast = document.getElementById('toast');
             toast.style.opacity = '1';
             setTimeout(() => toast.style.opacity = '0', 2000);
         };
 
-        // Authentication & Sync
-        const init = async () => {
-            try {
-                if (typeof __initial_auth_token !== 'undefined' && __initial_auth_token) {
-                    await signInWithCustomToken(auth, __initial_auth_token);
-                } else {
-                    await signInAnonymously(auth);
-                }
-            } catch (e) {
-                console.error("Auth failed:", e);
-                loader.style.display = 'none';
-            }
-        };
-
-        onAuthStateChanged(auth, (user) => {
-            currentUser = user;
-            if (user) {
-                const userDoc = doc(db, 'artifacts', appId, 'users', user.uid, 'bingo_state', 'current');
-                onSnapshot(userDoc, (docSnap) => {
-                    if (docSnap.exists()) {
-                        marked = docSnap.data().marked;
-                        renderBoard();
-                    } else {
-                        renderBoard();
-                    }
-                    loader.style.opacity = '0';
-                    setTimeout(() => loader.style.display = 'none', 300);
-                }, (err) => {
-                    console.error("Snapshot error:", err);
-                    renderBoard();
-                    loader.style.display = 'none';
-                });
-            }
-        });
-
-        init();
+        // Start the app
+        window.onload = loadProgress;
     </script>
 </body>
 </html>
