Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
              * Simply edit the text in these quotes. Keep exactly 24 items in the list.
              */
             const masterChallenges = [
-                "Read a chapter outdoors", "Character makes a choice you hate", "Try a new coffee roast", "Finish a book early", "Export a highlight/note",
+                "Read a chapter outdoors", "Character makes a choice you hate", "Try a new coffee roast", "Finish a book early", "Share a line or quote",
                 "Prediction came true", "Plot twist you didn't see", "Read 50 pages in one sitting", "Mention a vegan snack", "Look up a word you didn't know",
                 "Share a 'casting' idea", "Finish the book!", "Recommend a book", "Read in an NWA park",
                 "Character has a pet", "Bookmark is not a bookmark", "Author's debut novel", "Read a new genre", "Book has a map",
@@ -285,3 +285,4 @@
     </script>
 </body>
 </html>
+
